--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <link rel="stylesheet" type="text/css" href="./animate.css">
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png">
-    <link rel="manifest" href="./favicons/site.webmanifest">
-    <link rel="mask-icon" href="./favicons/safari-pinned-tab.svg" color="#f56565">
-    <link rel="shortcut icon" href="./favicons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-touch-icon.png?v=qAJMPlr73Y">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png?v=qAJMPlr73Y">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png?v=qAJMPlr73Y">
+    <link rel="manifest" href="./favicons/site.webmanifest?v=qAJMPlr73Y">
+    <link rel="mask-icon" href="./favicons/safari-pinned-tab.svg?v=qAJMPlr73Y" color="#f56565">
+    <link rel="shortcut icon" href="./favicons/favicon.ico?v=qAJMPlr73Y">
     <meta name="apple-mobile-web-app-title" content="UCSD JSA">
     <meta name="application-name" content="UCSD JSA">
     <meta name="msapplication-TileColor" content="#f56565">
-    <meta name="msapplication-config" content="./favicons/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="msapplication-config" content="./favicons/browserconfig.xml?v=qAJMPlr73Y">
+    <meta name="theme-color" content="#f56565">
   </head>
 
   <body class="antialiased bg-red-400 select-none">
@@ -29,8 +29,8 @@
       <div class="animated fadeIn slow max-w-xs w-2/3 mt-8 mb-6">
         <img src="./img/logo-white.png" alt="JSA Logo in White">
       </div>
-      <div class="animated fadeIn delay-1s flex flex-col w-screen max-w-md items-start">
-        <h1 class="mb-6 mx-8 font-Montserrat font-semibold text-5xl text-white leading-tight">Bringing Japan to UCSD.</h1>
+      <div class="animated fadeIn delay-1s flex flex-col w-screen max-w-md items-center">
+        <h1 class="mb-6 mx-8 font-Montserrat font-semibold text-5xl text-white text-center leading-tight">Bringing Japan to UCSD.</h1>
         <a class="mb-12 mx-8 bg-white rounded-full font-Montserrat font-semibold text-red-500 text-base px-6 py-4" href="./about.html" title="Who we are">Find out who we are</a>
       </div>
       <svg class="animated fadeInDown delay-2s inset-x-0 bottom-0 mx-auto w-24 fill-current text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
@@ -39,8 +39,9 @@
     </div>
 
     <!--Event Header-->
-    <div class="w-full bg-red-100 flex flex-wrap items-baseline self-start">
-      <h2 class="ml-6 mt-8 mb-4 font-Montserrat text-2xl text-red-900 font-semibold">Upcoming Events</h2>
+    <div class="w-full bg-red-100 flex flex-wrap items-baseline justify-center">
+      <h2 class="mx-4 mt-8 mb-4 font-Montserrat text-2xl text-red-900 font-semibold">Upcoming Events</h2>
+      <a class="mx-4 font-Montserrat text-base underline text-red-800" href="https://www.facebook.com/groups/ucsdjsa/events/" target="_blank">See all</a>
     </div>
 
     <!--Event Cards-->
@@ -53,8 +54,8 @@
     </div>
 
     <!--More JSA Header-->
-    <div class="w-full bg-red-200 flex flex-wrap items-baseline self-start">
-      <h2 class="ml-6 mt-8 font-Montserrat text-2xl text-red-900 font-semibold">More Info</h2>
+    <div class="w-full bg-red-200 flex flex-wrap items-baseline justify-center">
+      <h2 class="mt-8 font-Montserrat text-2xl text-red-900 font-semibold">More Info</h2>
     </div>
 
     <!--Info Paragraphs-->
@@ -73,8 +74,8 @@
 
     <!--Footer-->
     <div class="w-full h-auto bg-red-400 text-red-800">
-      <h4 class="ml-4 sm:ml-12 mt-8 font-Montserrat text-xl font-semibold" >Contact us!</h4>
-      <div class="flex flex-row sm:ml-8 mt-4 w-56 justify-around">
+      <h4 class="mt-8 font-Montserrat text-2xl font-semibold text-center" >Contact us!</h4>
+      <div class="mt-4 mx-auto flex flex-row w-56 justify-around">
         <a href="https://www.facebook.com/groups/ucsdjsa/" target="_blank" title="Facebook">
           <svg class="w-10 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
             <path d="M10 .4C4.698.4.4 4.698.4 10s4.298 9.6 9.6 9.6 9.6-4.298 9.6-9.6S15.302.4 10 .4zm2.274 6.634h-1.443c-.171 0-.361.225-.361.524V8.6h1.805l-.273 1.486H10.47v4.461H8.767v-4.461H7.222V8.6h1.545v-.874c0-1.254.87-2.273 2.064-2.273h1.443v1.581z"/>
@@ -93,8 +94,7 @@
           </svg>
         </a>
       </div>
-      <img class="w-40 my-8 m-auto" src="./img/logo-red-700.png" alt="JSA Logo in Dark Red">
-      <p class="font-Montserrat text-red-700 text-center pt-2 pb-6">© 2019 UCSD JSA. All rights reserved.</p>
+      <p class="font-Montserrat text-red-800 text-center mt-8 mb-6">© 2019 UCSD JSA. All rights reserved.</p>
     </div>
 
     <!--Scripts-->
